# simpleterrain

./: '  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  vcpkg.json
res/: shader.frag  shader.vert
res/shaders/: chunk_fragment.glsl  chunk_vertex.glsl
src/: block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  game.c  game.h  input.c  input.h  main.c  shader.c  shader.h  shared.h  texture.c  texture.h  world.c  world.h  worldgen.c  worldgen.h
